--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "url": "https://github.com/yuchiko/test-pravo-agency"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
     "browser-sync": "^2.11.1",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-sourcemaps": "^1.6.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1"
+    "gulp-rigger": "^0.5.8",
+    "gulp-sass": "^2.1.1",
+    "gulp-sourcemaps": "^1.6.0"
   }
 }
